# TechnicalAssignment

./: .gitignore  LICENSE  README.md  package_statistics.py  pyproject.toml  setup.cfg  setup.py  test_package_statistics.py  tox.ini
.github/workflows/: actions.yml
src/package_statistics/: main.py  utilities.py
tests/: Contents-test1  Contents-test2  test_integration.py  test_package_statistics.py  test_unit.py  tox.ini
tests/data/: Contents-test1  Contents-test2  debian_mirror.html
