[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]

[project]
name = "package_statistics"
dynamic = ["version"]
description = ""
dependencies = [
    "click",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "tox",
]

[project.scripts]
package_statistics = "package_statistics.main:cli"

[tool.setuptools_scm]

[tool.ruff]
src = ["src", "tests"]
ignore = [
]
line-length = 79
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PL",   # Pylint
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list =
        py{39,310,311}
        lint
        type

    [testenv]  # settings common to all environments 
    commands = 
        python -m unittest discover tests/ "test_*.py"

    [testenv:lint]
        allowlist_externals = ruff
    commands = 
        ruff .

    [testenv:type]
        allowlist_externals = mypy
    commands = 
        mypy src tests
"""
