[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]

[project]
name = "package_statistics"
dynamic = ["version"]
description = ""
dependencies = [
    "click",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "ruff",
    "tox",
]

[project.scripts]
package_statistics = "package_statistics.main:cli"

[tool.setuptools_scm]

[tool.ruff]
src = ["src", "tests"]
lint.ignore = [
]
line-length = 79
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PL",   # Pylint
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list =
        lint
        type
        py{39,310,311}
        report

    [testenv]  # settings common to all environments
    allowlist_externals = coverage
    depends =
        report: py310
    commands =
        coverage run -m unittest discover tests/ "test_*.py"

    [testenv:lint]
    allowlist_externals = ruff
    commands =
        ruff .

    [testenv:type]
    allowlist_externals = mypy
    commands =
        mypy src tests

    [testenv:report]
    allowlist_externals = coverage
    depends = py310
    commands =
        coverage xml

"""
