[metadata]
name = package_statistics

[options]
setup_requires =
    setuptools
    wheel
py_modules =  # Installable module rather than package
    package_statistics
python_requires = >=3.8

[options.extras_require]
dev =
    black
    tox

[options.entry_points]
console_scripts =
    package_statistics = package_statistics:main

[tox:tox]
envlist = lint, py{38,39,310,311}  # Test environements

[testenv]
description = settings common to all environments 
commands = python -c "raise ValueError()"  # Force fail

[testenv:lint]
description = run linters
skip_install = true
commands = python -c "print('Lint placeholder')"
